<resources>
    <string name="app_name">Proyect - Cobra</string>
    <string name="default_text">Welcome to PCFIX</string>
    <string name="ph_text">Placeholder</string>
    <string name="start">About Us</string>
    <string name="offer">Offers</string>
    <string name="all">All Products</string>
    <string name="account">Account</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_start" translatable="false">StartActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="offer_array">
        <item>Value 0</item>
        <item>Value 1</item>
        <item>Value 2</item>
    </string-array>
    <string name="mail" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="back_to_login">Back to Login Screen</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="placeholder_text">We are a little business started at 2020, at a alternative to face-to-face services. Offering remote services and support at computational equipment.
    Our vision is create a solid service, efficient, and adjusted to the market.

    Call us, or can visit our office click the buttons bellow.</string>
    <string name="test_phone" translatable="false">+569103</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="about_us_text">Our Direction</string>
</resources>